Adding dedicated heuristic files in preperation of putting vanilla hadd back in.

--- a/src/search/Makefile
+++ b/src/search/Makefile
@@ -66,6 +66,8 @@ HEADERS = \
 ## "make" to relink is enough; no need to do a complete rebuild.
 
 HEADERS += additive_heuristic.h
+HEADERS += fsap_blocked_additive_heuristic.h
+HEADERS += fsap_penalized_additive_heuristic.h
 HEADERS += blind_search_heuristic.h
 HEADERS += cea_heuristic.h
 HEADERS += cg_heuristic.h cg_cache.h
